# Rust-NN

./: .gitignore  Cargo.toml  TODO.md  model.state
src/: chain.rs  graphs.rs  main.rs  model.rs  tensor.rs
src/data_management/: data_augmentation.rs  dataloader.rs  mod.rs
src/examples/: mnist.rs
src/helpers/: conv_helpers.rs  initialize_weights.rs  mod.rs  save_load.rs  train_utils.rs
src/layers/: chain.rs  convolutional.rs  convolutional1d.rs  convolutional2d.rs  dropout.rs  flatten.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  tests.rs  tracked.rs
src/layers/activations/: relu.rs  sigmoid.rs
src/layers/pooling/: maxpool1d.rs  maxpool2d.rs  mod.rs
src/loss_functions/: binary_cross_entropy_loss.rs  cross_entroy_loss.rs  mean_squared_error_loss.rs  mod.rs
src/optimizers/: mod.rs  stochastic_gradient_descent.rs
src/profiling/benchmarks/: conv2d.rs  mod.rs
src/tests/: conv.rs  mod.rs
