[package]
name = "rust-nn-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-stats = "0.6.0"
plotters = "0.3.7"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
debug = true
